deploy: add modelscope scoring api space (#11)
